--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,16 +2,15 @@
 
 
 {% block content %}
+<h1>Build a blog</h1>
 {% if blogs|length == 0 %}
-<p>No blogs yet.</p>
+    <p>No blogs yet.</p>
 {% else %}
-    <ul>
-        {% for blog in blogs %}
-        <li>{{blog.title}}</li>
-        <li>{{blog.body}}</li>
-        <hr>
+    {% for blog in blogs %}
+    <h2>{{ blog.title }}</h2>
+    <p>{{ blog.body }}</p>
+    <hr>
         {% endfor %}
-    </ul>
 
 {% endif %}
 
