--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,10 +7,12 @@
     <p>No blogs yet.</p>
 {% else %}
     {% for blog in blogs %}
-    <h2>{{ blog.title }}</h2>
+    <h2>
+        <a href="./blog?id={{ blog.id }}">{{ blog.title }}</a>
+    </h2>
     <p>{{ blog.body }}</p>
     <hr>
-        {% endfor %}
+    {% endfor %}
 
 {% endif %}
 
