--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,18 @@
 <html>
     <head>
         <nav>
-            <a href="/blog">Main Blog Page</a>
-            &nbsp;
-            <a href="/newpost">Add a Blog Entry</a>
+            <div>
+                <a href="/">home</a>
+                    &nbsp;
+                <a href="/blog">all posts</a>
+                &nbsp;
+                <a href="/newpost">new post</a>
+            </div> 
+            <div>
+                <a href='/logout'>logout</a>
+                &nbsp;
+                <a href='/login'>login</a>
+            </div>
         </nav>
         <title>{{title}}</title>
         <style>
