--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1>Build a blog</h1>
+<h1>blog posts!</h1>
 {% if blogs|length == 0 %}
     <p>No blogs yet.</p>
 {% else %}
