--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Log in</h1>
-<p>If you don't have an account, you may <a href="/signup">register</a> for one</p>
+<h1>log in!</h1>
+<p>If you don't have an account, you may <a href="/register">register</a> for one</p>
 <form action="/login" method="post">
     <table>
         <tr>
