--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-        <h1>Add a blog entry</h1>
+        <h1>new post!</h1>
         <form method='post'>
             <label for="title">
                 Title for your new blog:</br>
