--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -5,13 +5,13 @@
         <h1>new post!</h1>
         <form method='post'>
             <label for="title">
-                Title for your new blog:</br>
+                title:</br>
                 <input type="text"  name="title" value="{{ title }}"/>
             </label>
             </br>
             </br>
             <label for="body">
-                 Your new blog:</br>
+                 post:</br>
                 <textarea type="text" name="body" value="{{ body }}"></textarea>
             </label>
             </br>
