--- a/templates/entry.html
+++ b/templates/entry.html
@@ -5,5 +5,6 @@
 
 <h2>{{ blog.title }}</h2>
 <p>{{ blog.body }}</p>
+<p class="user">written by <a href="./blog?userid={{ blog.user_id }}">{{ user.username }}</a></p>
 
 {% endblock %}
