--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <ul>
     {% for user in users %}
     
-        <li><a href="./user?id={{ user.id }}">{{ user.username }}</a></li>
+        <li><a href="/blog?userid={{ user.id }}">{{ user.username }}</a></li>
     {% endfor %}
     </ul>
 
